--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,31 @@
 <h1>Display your Pirate here</h1>
-
+<div class="pirate">
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Height: <%= @pirate.height %></h4><br>
+  <h4>Weight: <%= @pirate.weight %></h4><br>
 
 <h2>Display your first ship here</h2>
 
+  <h3>Ship 1</h3>
+  <% @ships.each.with_index do |ship, index| %>
+  <div class="Ship 1">
+    <% if index == 0 %>
+    <p>Name: <%=ship.name%></p><br>
+    <p>Type: <%=ship.type%></p><br>
+    <p>Booty: <%=ship.booty%></p><br>
+    <% end %>
+  <%end%>
+</div><br>
 
 <h2>Display your second ship here</h2>
+
+  <h3>Ship 2</h3>
+  <% @ships.each.with_index do |ship, index| %>
+  <div class="Ship 2">
+    <% if index == 1 %>
+    <p>Name: <%=ship.name%></p><br>
+    <p>Type: <%=ship.type%></p><br>
+    <p>Booty: <%=ship.booty%></p><br>
+    <% end %>
+  <%end%>
+</div><br>
